PROJECT(Overlord)

IF(WIN32)
ADD_DEFINITIONS(-w -w-8004  -w-8026  -w-8027  -w-8030  -w-8057  -w-8066 -DBCC  )
ELSE(WIN32)
ADD_DEFINITIONS(-W -Wall -Wno-unused -Wno-sign-compare)
ENDIF(WIN32)

SET ( OVERLORD_SOURCE_DIR .)
INCLUDE_DIRECTORIES(
	${OVERLORD_SOURCE_DIR}
	${OVERLORD_SOURCE_DIR}/datatypes
	${OVERLORD_SOURCE_DIR}/process
	${OVERLORD_SOURCE_DIR}/report
	${OVERLORD_SOURCE_DIR}/combat
	${OVERLORD_SOURCE_DIR}/combat/actions
	${OVERLORD_SOURCE_DIR}/combat/orders
 	${OVERLORD_SOURCE_DIR}/datatypes/rules
  	${OVERLORD_SOURCE_DIR}/datatypes/entities
   	${OVERLORD_SOURCE_DIR}/datatypes/varieties
    	${OVERLORD_SOURCE_DIR}/datatypes/elements
     	${OVERLORD_SOURCE_DIR}/datatypes/conditions
      	${OVERLORD_SOURCE_DIR}/datatypes/collections
       	${OVERLORD_SOURCE_DIR}/datatypes/misc
        ${OVERLORD_SOURCE_DIR}/datatypes/strategies
        ${OVERLORD_SOURCE_DIR}/process/orders
        ${OVERLORD_SOURCE_DIR}/process/conflicts
        ${OVERLORD_SOURCE_DIR}/report/patterns
        ${OVERLORD_SOURCE_DIR}/misc
	${OVERLORD_SOURCE_DIR}/implementation
	${OVERLORD_SOURCE_DIR}/implementation/actions
	${OVERLORD_SOURCE_DIR}/implementation/combat
	${OVERLORD_SOURCE_DIR}/implementation/effects
	)

SET(OVERLORD_SOURCES  )
SET(OVERLORD_DATALIB  )

AUX_SOURCE_DIRECTORY ( . OVERLORD_SOURCES )

AUX_SOURCE_DIRECTORY ( datatypes  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( process  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/rules  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/entities  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/varieties  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/elements  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/conditions  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/collections  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/misc  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( datatypes/strategies  OVERLORD_DATALIB )
AUX_SOURCE_DIRECTORY ( process/orders  OVERLORD_DATALIB )

AUX_SOURCE_DIRECTORY ( report  OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( process/conflicts OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( report/patterns OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( implementation OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( implementation/actions OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( implementation/combat OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( implementation/effects OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( combat  OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( combat/actions  OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( combat/sources  OVERLORD_SOURCES )
AUX_SOURCE_DIRECTORY ( misc OVERLORD_SOURCES )

ADD_LIBRARY ( ovlLib ${OVERLORD_DATALIB} )

LINK_DIRECTORIES(${OVERLORD_BINARY_DIR})
ADD_EXECUTABLE(Overlord ${OVERLORD_SOURCES} )
TARGET_LINK_LIBRARIES (Overlord ovlLib)

