####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = overlord

## INCLUDES were found outside kdevelop specific part

overlord_SOURCES = main.cpp 
overlord_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
overlord_LDFLAGS = $(all_libraries) 
                                                                                
