####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = overlord

## INCLUDES were found outside kdevelop specific part

overlord_SOURCES = DataManipulator.cpp Global.cpp turn.cpp 
overlord_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = DataManipulator.h movements directions terrains turn.cpp races Global.h Global.cpp DataManipulator.cpp titles stances stats equipments items skills 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
overlord_LDFLAGS = $(all_libraries) 
                                                                                
